[package]
name = "nilang_lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
crop = "0.4.3"
dashmap = "6.2.1"
log = "0.4.33"
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tower-lsp = "0.20.0"
nilang = { path = "/home/lando/Dev/nilang" }
env_logger = "0.11.11"
